# gidd

./: .gitignore  LICENSE  README.md  convert_checkpoint.py  pyproject.toml  requirements.txt  upload_models.sh
gidd/: __init__.py  checkpoints.py  data.py  diffusion_process.py  likelihood.py  loss.py  modeling.py  optimizer.py  pipeline.py  quad.py  sampling.py  train.py  trainer.py  utils.py
gidd/configs/: gen_ppl.yaml  gidd.yaml  self_correction.yaml
gidd/configs/data/: defaults.yaml  fineweb.yaml  lm1b.yaml  owt.yaml
gidd/configs/logging/: default.yaml
gidd/configs/optimizer/: quad.yaml
gidd/eval/: decode.py  generate_samples.py  generative_ppl.py  loss.py  self_correction.py
gidd/models/: dit.py  modeling_dit.py
